@@ -232,8 +232,6 @@ AC_SUBST(e_localstatedir)
 AC_SUBST(CRYPT_FLAGS)
 AC_SUBST(DL_FLAGS)
 AC_SUBST(PTHREAD_FLAGS)
-AC_SUBST(SSL_CPPFLAGS)
-AC_SUBST(SSL_LDFLAGS)
 AC_SUBST(VERSION)
 AC_SUBST(WZD_BUILD_NUM)
 AC_SUBST(WZD_BUILD_OPTS)
